--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,17 +3,17 @@
   "name": "Rainblue",
   "icons": [
     {
-      "src": "rainlogo.png",
+      "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type":  "image/png"
+      "type": "image/x-icon"
     },
     {
-      "src": "rainlogo.png",
+      "src": "logo192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "rainlogo.png",
+      "src": "logo512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
